updated the hover effects on bar graphs through out the report builder page and fixed the mis-alignment on comparative table

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -76,6 +76,12 @@ body::-webkit-scrollbar {
 .mt-2px{
   margin-top: 2px;
 }
+.ms-2px{
+  margin-left: 2px;
+}
+.ws-nowrap{
+  white-space: nowrap;
+}
 .p-relative {
   position: relative;
 }
@@ -2827,17 +2833,24 @@ body.fullScreen .progressAllBarsDivMain{
   opacity: 0;
   transition: 0.125s;
   z-index: 1  ;
+  border: 4px solid transparent;
 }
 .progressBarEachDiv:hover::after{
   opacity: 1;
+  border: 4px solid rgba(0,0,0,0.075);
+
 }
 .CardProgressBig {
   background: var(--green-clr);
   border-radius: 8px;
   width: 100%;
   transform: rotate(180deg);
+  transition: 0.25s ease-in;
+  
 }
-
+.CardProgressBig:hover{
+  
+}
 .progressAbsltCls {
   width: 100%;
   display: flex;
@@ -3405,12 +3418,35 @@ body.fullScreen .progressAllBarsDivMain{
   opacity: 0;
   transition: 0.125s;
   z-index: 1  ;
+  border: 4px solid transparent;
 }
 .cumulativeValuesProgrees:hover::after{
   opacity: 1;
+  border: 4px solid rgba(0,0,0,0.1);
 }
 .expenseCard .cumulativeValuesProgrees{
   background-image: none;
+}
+.expenseCard .cumulativeValuesProgrees::after{
+  display: none;
+}
+.expenseCard .cumulativeValuesProgrees .cumulativeprogreeDivcommon::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255,255,255,0.15);
+  opacity: 0;
+  transition: 0.125s;
+  z-index: 1  ;
+  border: 4px solid transparent;
+  border-radius: 8px;
+}
+.expenseCard .cumulativeValuesProgrees .cumulativeprogreeDivcommon:hover::after{
+  opacity: 1;
+  border: 4px solid rgba(0,0,0,0.1);
 }
 .CompProgressAbsltCls.legacy .cumulativeValuesProgrees,
 .CompProgressAbsltCls.income .cumulativeValuesProgrees {
@@ -4508,14 +4544,19 @@ background: #1D856C;
   background-color: rgba(255,255,255,0.15);
   opacity: 0;
   transition: 0.125s;
-  z-index: 1  ;
+  z-index: 1;
 }
 .bgImgNoneAndTabRadius:hover::after{
-  opacity: 1;
+  opacity: 1;  
 }
 .bgImgNoneAndTabRadius .CardProgressBig {
   border-radius: 8px;
+  border: 4px solid transparent;
 }
+.bgImgNoneAndTabRadius:hover .CardProgressBig {
+  border: 4px solid rgba(0,0,0,0.1);
+}
+
 
 .showBtn1 {
   display: none;
